# reflexion-framework

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
evaluation/: base.py  internal.py  leetcode.py
evaluation/local/: base.py  python.py  rust.py
examples/: humaneval_python.py  leetcodehard_python.py
prompts/coding/rust/: reflexion.yaml
prompts/improved/coding/python/: simple.yaml
prompts/initial/testing/python/: CoT.yaml
prompts/testing/python/: simple.yaml
prompts/testing/rust/: simple.yaml
reflexion/actors/: __init__.py  function.py  util.py
reflexion/agents/: __init__.py  base.py  programming.py  util.py
reflexion/datasets/: __init__.py  programming.py  utils.py
reflexion/environments/: __init__.py
reflexion/environments/programming/: __init__.py  internal.py  leetcode.py
reflexion/environments/programming/local/: base.py  python.py  rust.py  util.py
reflexion/evaluation/: base.py
reflexion/evaluation/local/: python.py  util.py
reflexion/evaluators/programming/: __init__.py  internal.py
reflexion/evaluators/programming/local/: base.py  python.py  util.py
reflexion/llms/: __init__.py  base.py  openai.py  starchat.py
reflexion/prompts/: __init__.py
reflexion/prompts/improved/coding/rust/: simple.yaml
tests/: test_py_eval.py  test_rust_eval.py
tests/agents/: programming_demo.py  test_programming_agent.py
tests/datasets/: test_programming_dataset.py
tests/evaluation/: test_py_local_env.py  test_rust_local_env.py
tests/evaluators/programming/: test_internal_env.py
(+28 files in other folders)
